<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <ScrollView
            android:layout_margin="20dp"
            android:background="@color/boxColor"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:text="@string/title_label"
                                android:layout_gravity="end"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:paddingBottom="10dp"
                                android:id="@+id/details_title_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:id="@+id/details_title"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/boxLineColor">
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:text="@string/genre_label"
                                android:layout_gravity="end"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:paddingBottom="10dp"
                                android:id="@+id/details_genre_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:id="@+id/details_genre"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/boxLineColor">
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:text="@string/number_label"
                                android:layout_gravity="end"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:paddingBottom="10dp"
                                android:id="@+id/details_number_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:textAlignment="center"
                                android:id="@+id/details_number"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/boxLineColor">
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:text="@string/net_label"
                                android:layout_gravity="end"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:paddingBottom="10dp"
                                android:id="@+id/details_net_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:id="@+id/details_net"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/boxLineColor">
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">
                            <TextView
                                android:text="@string/athome_label"
                                android:layout_gravity="end"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:paddingBottom="10dp"
                                android:id="@+id/details_athome_label" />
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="10dp"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:id="@+id/details_athome"/>
                        </LinearLayout>
                    </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>